[tool.poetry]
name = "py-kafka-tool"
version = "0.1.0"
description = "A python kafka utility tool"
authors = ["Vincent Wen <vincent.ww@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
